--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,14 @@ edition = "2021"
 name = "01"
 path = "src/01.rs"
 
+[[bin]]
+name = "02"
+path = "src/02.rs"
+
+
 [dependencies]
 itertools = "0.12.0"
+regex = "1.10.2"
 
 [profile.release]
 strip = "symbols"
