--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,10 @@ path = "src/02.rs"
 name = "03"
 path = "src/03.rs"
 
+[[bin]]
+name = "04"
+path = "src/04.rs"
+
 [dependencies]
 itertools = "0.12.0"
 regex = "1.10.2"
