--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,10 @@ path = "src/03.rs"
 name = "04"
 path = "src/04.rs"
 
+[[bin]]
+name = "05"
+path = "src/05.rs"
+
 [dependencies]
 itertools = "0.12.0"
 regex = "1.10.2"
