--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,10 @@ path = "src/04.rs"
 name = "05"
 path = "src/05.rs"
 
+[[bin]]
+name = "06"
+path = "src/06.rs"
+
 [dependencies]
 indicatif = "0.17.7"
 itertools = "0.12.0"
