--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,10 @@ path = "src/05.rs"
 name = "06"
 path = "src/06.rs"
 
+[[bin]]
+name = "07"
+path = "src/07.rs"
+
 [dependencies]
 indicatif = "0.17.7"
 itertools = "0.12.0"
