--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,10 @@ path = "src/06.rs"
 name = "07"
 path = "src/07.rs"
 
+[[bin]]
+name = "08"
+path = "src/08.rs"
+
 [dependencies]
 im = "15.1.0"
 indicatif = "0.17.7"
