--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ path = "src/08.rs"
 im = "15.1.0"
 indicatif = "0.17.7"
 itertools = "0.12.0"
+num = "0.4.1"
 regex = "1.10.2"
 
 [profile.release]
